# Accountant

./: .env.example  .gitignore  CLAUDE.md  deploy.sh  start.sh  stop.sh  update.sh
backend/: _write_migration.py  accountant.service  alembic.ini  nginx.conf.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11af39e2af84_add_phase2_contact_tags_activities_file_.py  21e75ba17338_add_missing_performance_indexes.py  3c2792534b88_add_reconciliation_and_unified_messages_.py  46776971ed90_add_meeting_type_tokens_to_calendar_.py  4b2377d12eeb_add_brain_tables.py  52bb923d86c1_add_tax_rates_table.py  603b125685d3_add_gmail_scan_result_body_text_and_.py  6eb875a50e5d_add_cashbook_tables.py  81d2dd1adfb0_add_google_oauth_fields_to_users_table.py  8b7bcf8251ac_add_idempotency_keys_table.py  a1ac587a8fea_platform_admin_feature_flags_settings_.py  a1b2c3d4e5f6_make_payment_url_nullable.py  a7194612ee9e_add_phase4_pages_scheduling_branding_.py  a7b8c9d0e1f2_meeting_slug_and_lobby.py  a7bac2d41f69_initial_schema.py  a7c3f2d91e4b_add_google_calendar_push_subs.py  ab286478fc11_add_brain_chat_files_smart_imports_.py  b1c2d3e4_pages_v2_conversational.py  b1c2d3e5_pages_static_publish.py  b1c2d3e6_section_variants.py  b1c2d3e7_section_variant_svg_thumbnails.py  b1c2d3e8_section_variant_animations.py  b2c3d4e5f6a7_coach_intelligence_tables.py  b8c9d0e1f2g3_meeting_transcripts.py  b8d4e5f6a7c9_add_websites_analytics_tracking.py  (+56 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/hocuspocus/: package-lock.json  package.json  server.js
backend/tests/: conftest.py  known_failures.txt
(+735 files in other folders)
